<resources>
    <string name="hello_world">Hello world!</string>
    <string name="app_name">KeepTrack</string>
    <string name="action_settings">Settings</string>
    <string name="title_text">Calorie Counter</string>
    <string name="hint_food">What did you eat?</string>
    <string name="hint_calories">Calories Counter</string>
    <string name="submit_text">Submit</string>
    <string name="delete_item">Delete Item</string>
    <string name="share_title">Share</string>
    <string name="food_total_text">Total Calories:</string>
    <string name="cal_text">Cal.</string>
    <string name="food_items_num">Food Items:</string>
    <string name="title_activity_display_foods">DisplayFoodsActivity</string>
    <string name="title_activity_food_item_details">FoodItemDetailsActivity</string>
    <string name="calories_header">Calories:</string>
    <string name="_number">200</string>
    <string name="consumed_info">Consumed on..</string>
</resources>
