<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/title_text"
        android:textColor="@color/colorAccent"
        android:textSize="28sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/titleText"
        android:layout_centerHorizontal="true"
        android:src="@drawable/apple" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:background="@drawable/row_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/foodEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:hint="@string/hint_food"
            android:padding="14dp"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/caloriesEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_calories"
            android:inputType="number"
            android:padding="14dp"
            android:textColor="#121212" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimary"
            android:text="@string/submit_text"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

</RelativeLayout>