<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:background="@color/colorPrimary"
    tools:context=".FoodItemDetailsActivity">

    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/apple"
        android:layout_centerHorizontal="true"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:contentDescription="TODO" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_below="@+id/logo"
        android:background="@drawable/row_bg"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/detsFoodName"
        android:textSize="19sp"
        android:layout_marginTop="33dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detsCaloriesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/calories_header"
            android:textColor="@color/colorAccent"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/detsCaloriesValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:text="@string/_number"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/detsDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="14dp"
            android:text="@string/consumed_info"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="italic" />


        <Button
            android:id="@+id/detsShareButton"
            android:text="@string/share_title"
            android:layout_gravity="end"
            android:background="@drawable/circle"
            android:layout_marginTop="45dp"
            android:layout_width="60dp"
            android:layout_height="60dp" />


    </LinearLayout>


</RelativeLayout>

